# lindows

./: .gitattributes  .gitignore  .golangci.yml  Cargo.toml  go.mod  go.sum  justfile  lindows.code-workspace  main.go  root.go
.github/workflow/: ci.yaml
.github/workflows/: go.yml
examples/ffmpeg-to-webrtc/answer/: main.go
examples/ffmpeg/offer/: main.go
examples/ffmpeg/record/: main.go  runCommand.go
examples/ffmpeg/rtp/: main.go
examples/ffmpeg/server/: main.go
examples/user32/enumwindows/: main.go
examples/user32/findwindow_getclassname/: main.go
examples/webrtc-ws/answer-ffmpeg/: main.go
examples/webrtc-ws/anwer/: main.go
examples/webrtc-ws/offer/: main.go
internal/capture/: manager.go  stream.go  stream_test.go
internal/config/: capture.go  desktop.go  webrtc.go
internal/desktop/: clipboardEvent.go  event.go  keyEnvert.go  manager.go  mouseEvent.go
internal/desktop/clipboard/: clipboard.go
internal/desktop/mouse/: mouse.go
internal/types/codec/: codec.go
internal/webrtc/: handle.go  webrtc.go  webrtc_test.go
lindows-client/: .gitignore  .taurignore  Cargo.toml  README.md  Trunk.toml  forge.config.js  index.html  main.js  package-lock.json  package.json  tailwind.config.js
lindows-client/css/: input.css
lindows-client/src/: app.rs  components.rs  electron.rs  main.rs  message_generated.rs  state.rs  tauri.rs  user_event.rs
lindows-client/src-electron/: main.js  preload.js
lindows-client/src-tauri/: Cargo.toml  tauri.conf.json
lindows-client/src-tauri/capabilities/: default.json
lindows-client/src-tauri/src/: commands.rs  main.rs
lindows-client/src/components/: screen.rs  sidebar.rs  svgs.rs  theme_controller.rs  title_bar.rs
lindows-client/src/state/: config.rs  session.rs  window.rs
lindows-rs/lindows-utils/: Cargo.toml  README.md  build.rs
lindows-rs/lindows-utils/.cargo/: config.toml
lindows-rs/lindows-utils/examples/: record-screen.rs
lindows-rs/lindows-utils/src/: common.rs  lib.rs
lindows-rs/lindows-utils/src/bindings/: aom_ffi.h
lindows-rs/lindows-utils/src/common/: aom.rs  bytes.codec.rs  codec.rs  compress.rs  config.rs  convert.rs  password_security.rs  platform.rs  vpxcodec.rs
lindows-rs/lindows-utils/src/common/platform/: windows.rs
lindows-rs/src/: conn.rs  lib.rs  record.rs  rtc.rs  server.rs
pkg/ffmpeg/: ffmpeg.go
pkg/flat/lindowsmsg/: message.fbs  message.go  payload.go
pkg/signal/: http.go  rand.go  signal.go
pkg/webrtc/: peerConn.go
pkg/yalog/: attr.go  docs.go  log.go  logger.go
winapi/: clipboard.go  gdi32.go  kernel32.go  keyevent.go  mouse.go  user32.go  winapi.go
