[package]
name = "lindows"
version = "0.1.0"
edition = "2021"
default-run = "lindows"

[lib]
name = "liblindows"
path = "lindows-rs/src/lib.rs"
# crate-type = ["cdylib", "staticlib", "rlib"]
crate-type = ["rlib"]

[[bin]]
name = "lindows"
path = "lindows-rs/src/bin/lindows.rs"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
scrap = { path = "lindows-rs/libs/rustdesk/libs/scrap" }
hbb_common = { path = "lindows-rs/libs/rustdesk/libs/hbb_common" }
anyhow = "1.0.82"
clap = "4.5.4"
crabgrab = { version = "*", features = ["bitmap"] }
futures-util = "0.3.30"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", default-features = false, features = ["net"] }
tokio-tungstenite = { version = "0.21.0" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
webrtc = "0.11"
bytes = "1.6.0"
lazy_static = "1.4.0"

[dependencies.winapi]
version = "0.3"
default-features = true
features = [
    "dxgi",
    "dxgi1_2",
    "dxgi1_5",
    "d3d11",
    "winuser",
    "winerror",
    "errhandlingapi",
    "libloaderapi",
    "sysinfoapi",
]
