[package]
name = "lindows-client-ui"
version = "0.0.0"
edition = "2021"
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.69", features = ["DomRect", "Element"] }
serde = { workspace = true }

[workspace]
members = ["src-tauri"]
