[package]
name = "lindows-client-ui"
version = "0.0.0"
edition = "2021"
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.69", features = [
    "DomRect",
    "Element",
    "RtcPeerConnection",
    "RtcDataChannel",
    "MediaStream",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcTrackEvent",
    "RtcRtpReceiver",
    "MediaStreamTrack",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcSessionDescription",
    "RtcIceCandidateInit",
    "RtcPeerConnectionState",
    "RtcIceConnectionState",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12.3", features = ["json"] }
anyhow = "1.0.82"
lazy_static = "1.4.0"

[workspace]
members = ["src-tauri"]
