[package]
name = "lindows-client"
version = "0.0.0"
description = "A Tauri App"
authors = ["M4n5ter <m4n5terrr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.14", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { workspace = true }
serde_json = "1"
tauri-plugin-single-instance = "2.0.0-beta"
tauri-plugin-clipboard-manager = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
