[package]
name = "lindows-client"
version = "0.0.0"
description = "A Tauri App"
authors = ["M4n5ter <m4n5terrr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.14", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { workspace = true }
serde_json = "1"
tauri-plugin-single-instance = "2.0.0-beta"
tauri-plugin-clipboard-manager = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!

# default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
