[package]
name = "lindows-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
backtrace = "0.3.71"
bytes = { version = "1.6.0", features = ["serde"] }
cfg-if = "1.0.0"
lazy_static = "1.4.0"
libc = "0.2.154"
log = "0.4.21"
num_cpus = "1.16.0"
rand = "0.8.5"
regex = "1.10.4"
serde = "1.0.199"
serde_derive = "1.0.199"
serde_json = "1.0.116"
sodiumoxide = "0.2.7"
sysinfo = { git = "https://github.com/rustdesk-org/sysinfo" }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
zstd = "0.13.1"
confy = { git = "https://github.com/open-trade/confy" }
dirs-next = "2.0.0"
directories-next = "2.0.0"
mac_address = "1.1.6"
toml = "0.8.12"
machine-uid = "0.5.1"

[dev-dependencies]
crabgrab = { version = "0.1.3", features = ["bitmap"] }

[build-dependencies]
target_build_utils = "0.3"
bindgen = "0.65"
pkg-config = { version = "0.3.27", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "synchapi",
    "pdh",
    "memoryapi",
    "handleapi",
    "synchapi",
    "sysinfoapi",
    "winbase",
] }
